--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -66,7 +66,7 @@ ul li {
     height: 800px;
     width: 100%;
     margin-bottom: 30px;
-    background-image: url(///INSERT IMAGE///) ;
+    background-image:;
     background-size: cover;
     background-position: top;
     object-fit: cover;
