--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -66,8 +66,99 @@ ul li {
     height: 800px;
     width: 100%;
     margin-bottom: 30px;
-    background-image:;
+    background-image:url(../Images/banner\ for\ portfolio.png);
     background-size: cover;
     background-position: top;
     object-fit: cover;
+}
+main section {
+    padding: 15px;
+}
+
+p {
+    padding:inherit;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    line-height: 30px;
+    font-size: 30px;
+}
+
+h2 {
+    font-size: 70px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: inherit;
+}
+
+.card {
+    flex: 1 0 0;
+    padding: 20px;
+    text-align: center;
+    border-style: inset;
+    border-color:#25331d;
+    border-width: 5px;
+}
+
+.card img {
+    width: 100%;
+    min-width: 400px;
+}
+
+#project-grid {
+    --auto-grid-min-size: 600px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));
+    grid-template-rows:repeat(2,1fr);
+    background-color: #d0dfc8;
+    border: 10px inset #689053;
+    padding:15px;
+    font-size: 30px;
+    text-align: center;
+}
+
+#Work {
+    width: 100%;
+}
+
+.Work a p {
+    position: relative;
+    top: 20px;
+    border: 3px inset #304326;
+    background-color: #a8c49a;
+    color: black;
+    max-width: 600px;
+}
+
+.Work a {
+    max-width: 600px;
+}
+
+.Contact-Me ul li {
+    padding-top: 10px;
+    margin-right: 30px;
+    float: left;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 25px;
+}
+
+
+footer {
+    display: flex;
+    height: 90px;
+    justify-content: center;
+    align-items: center;
+    background-color: #d0dfc8;
+    color: black;
+    position: sticky;
+}
+
+@media (max-width:810px){
+ .main-header{
+    flex-direction: column;
+    align-items: center;
+ }   
+}
+
+@media (max-width: 520px){
+    nav ul {
+        flex-direction: column;
+    }
 }
